--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="18dp"
+            android:layout_margin="@dimen/margin"
             android:text="@string/login"
             android:textAlignment="center"
             tools:layout_editor_absoluteX="163dp"
@@ -39,10 +39,7 @@
                 android:id="@+id/name_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/padding"
-                android:paddingLeft="@dimen/padding"
-                android:paddingRight="@dimen/padding"
-                android:paddingTop="@dimen/padding"
+                android:padding="@dimen/padding"
                 android:text="@string/inGame"
                 style="@style/LabelStyle"/>
 
@@ -83,7 +80,6 @@
             android:id="@+id/loginSubmit_button"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
-            android:layout_marginTop="@dimen/margin"
             android:layout_alignParentRight="true"
             android:layout_below="@id/linear_login"
             android:text="@string/login"
