--- a/app/src/main/res/layout/active_reservations_fragment.xml
+++ b/app/src/main/res/layout/active_reservations_fragment.xml
@@ -5,9 +5,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Fragments.ActiveReservations">
 
-    <ListView
-        android:id="@+id/activeList"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/activeList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
