--- a/app/src/main/res/layout/activity_booking2.xml
+++ b/app/src/main/res/layout/activity_booking2.xml
@@ -3,29 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Booking">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Booking2">
 
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="368dp"
+            android:layout_height="551dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"/>
+                app:tabTextColor="@color/green" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@color/button_background"
+                app:tabTextColor="@color/green"
+                app:tabMode="fixed"/>
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:background="@color/title"/>
 
 
 
