--- a/app/src/main/res/layout/past_reservations_fragment.xml
+++ b/app/src/main/res/layout/past_reservations_fragment.xml
@@ -5,9 +5,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Fragments.PastReservations">
 
-
-    <ListView
-        android:id="@+id/pastList"
+    <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/pastList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
+
 </android.support.constraint.ConstraintLayout>
