--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="AppThemeCompat" parent="Base.Theme.AppCompat.Light">
+
+    </style>
+
 </resources>
