--- a/app/src/main/res/layout/past_reservations_fragment.xml
+++ b/app/src/main/res/layout/past_reservations_fragment.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Fragments.PastReservations">
 
 
     <ListView
-        android:id="@+id/pastList"
+        android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent">
+
+    </ListView>
+</LinearLayout>
