--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -47,59 +47,69 @@
             android:textSize="20sp"
             style="@style/LabelStyle"/>
 
-        <Button
-            android:id="@+id/findCoach_button"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:text="@string/findCoach"
-            android:layout_marginTop="50dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="4"
+            android:orientation="vertical"
             android:layout_below="@+id/welcomeMessage"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/custom_button"
-            style="@style/ButtonStyle"/>
+            android:gravity="center">
 
-        <Button
-            android:id="@+id/booking_button"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:text="@string/booking"
-            android:textSize="@dimen/button_text"
-            tools:layout_editor_absoluteX="136dp"
-            tools:layout_editor_absoluteY="119dp"
-            android:layout_below="@+id/findCoach_button"
-            android:layout_alignLeft="@+id/findCoach_button"
-            android:layout_alignStart="@+id/findCoach_button"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_button"
-            style="@style/ButtonStyle"/>
+            <Button
+                android:id="@+id/findCoach_button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/findCoach"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/custom_button"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
 
-        <Button
-            android:id="@+id/favoriteCoaches_button"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:text="@string/favoriteCoaches"
-            android:textSize="@dimen/button_text"
-            tools:layout_editor_absoluteX="136dp"
-            tools:layout_editor_absoluteY="119dp"
-            android:layout_below="@+id/booking_button"
-            android:layout_alignLeft="@+id/booking_button"
-            android:layout_alignStart="@+id/booking_button"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_button"
-            style="@style/ButtonStyle"/>
+            <Button
+                android:id="@+id/booking_button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/booking"
+                android:textSize="@dimen/button_text"
+                android:layout_below="@+id/findCoach_button"
+                android:layout_alignLeft="@+id/findCoach_button"
+                android:layout_alignStart="@+id/findCoach_button"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/custom_button"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
 
-        <Button
-            android:id="@+id/logout_button"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:text="@string/logout"
-            android:textSize="@dimen/button_text"
-            android:layout_below="@+id/favoriteCoaches_button"
-            android:layout_alignLeft="@+id/favoriteCoaches_button"
-            android:layout_alignStart="@+id/favoriteCoaches_button"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_button"
-            style="@style/ButtonStyle"/>
+            <Button
+                android:id="@+id/favoriteCoaches_button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/favoriteCoaches"
+                android:textSize="@dimen/button_text"
+                android:layout_below="@+id/booking_button"
+                android:layout_alignLeft="@+id/booking_button"
+                android:layout_alignStart="@+id/booking_button"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/custom_button"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/logout_button"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/logout"
+                android:textSize="@dimen/button_text"
+                android:layout_below="@+id/favoriteCoaches_button"
+                android:layout_alignLeft="@+id/favoriteCoaches_button"
+                android:layout_alignStart="@+id/favoriteCoaches_button"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/custom_button"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+
 
     </RelativeLayout>
 
