--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -45,7 +45,8 @@
             android:layout_marginTop="27dp"
             android:textAlignment="center"
             android:textSize="20sp"
-            style="@style/LabelStyle"/>
+            style="@style/LabelStyle"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
