--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:background">@color/background</item>
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Small">
@@ -21,12 +22,16 @@
         <item name="android:textSize">@dimen/label</item>
     </style>
 
-    <style name="SpinnerStyle" parent="Base.Widget.AppCompat.Spinner">
-        <item name="android:textColor">@color/white</item>
-    </style>
-
     <style name="AppThemeCompat" parent="Base.Theme.AppCompat.Light">
 
+    </style>
+
+    <style name="spinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
+        <item name="android:textAppearance">@style/spinnerDropDownItemStyle</item>
+    </style>
+
+    <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@color/label</item>
     </style>
 
 </resources>
