--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -70,7 +70,7 @@
                 android:id="@+id/booking_button"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
-                android:text="@string/booking"
+                android:text="@string/appointments"
                 android:textSize="@dimen/button_text"
                 android:layout_below="@+id/findCoach_button"
                 android:layout_alignLeft="@+id/findCoach_button"
