--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,8 +22,10 @@
         <item name="android:textSize">@dimen/label</item>
     </style>
 
-    <style name="AppThemeCompat" parent="Base.Theme.AppCompat.Light">
-
+    <style name="AppThemeCompat" parent="Theme.AppCompat.Light">
+        <item name="android:background">@color/background</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="spinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
@@ -31,7 +33,9 @@
     </style>
 
     <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
-        <item name="android:textColor">@color/label</item>
+        <item name="android:textColor">@color/white</item>
     </style>
+
+
 
 </resources>
