--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
@@ -34,6 +34,14 @@
 
     <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="datePickerStyle">
+        <item name="android:background" tools:targetApi="21"> @color/button_background</item>
+        <item name="android:headerDayOfMonthTextAppearance" tools:targetApi="21"> @color/white </item>
+        <item name="android:dayOfWeekTextAppearance" tools:targetApi="21"> @color/green </item>
+        <item name="android:colorAccent" tools:targetApi="21"> @color/green </item>
+        <item name="android:headerMonthTextAppearance" tools:targetApi="21">@color/green</item>
     </style>
 
 
